rspec-tools/tests/resources/invalid-asciidoc/wrong_endif.adoc
Some content followed by an ifdef

ifdef::env-github,rspecator-view[]

This ifdef is wrong because we don't close it with the expected values

endif::test,rspecator-view[]
